--- a/style.css
+++ b/style.css
@@ -163,6 +163,18 @@ input::placeholder {
     min-width: 1px;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .show {
     border-radius: 15px;
     background-color: var(--green-900);
